OK my next steps will be to see and understand why i get no suggestions when i put on the from to destination and the pop up window comes saying couldnt fetch info, then see if the tour can be saved/log be created, sonst Postgres verbindung geht es rennt ohne Problem hab zwar 12 Warnings aber sind irrelevant